<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:elevation="@dimen/cardview_default_elevation"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:transitionName="@string/fab_transition"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.prolific.android.prolific.AddActivity"
    tools:showIn="@layout/activity_add">

    <LinearLayout
        android:id="@+id/content_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <EditText
            android:id="@+id/bookTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_input"
            android:inputType="text" />

        <EditText
            android:id="@+id/bookAuthorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_input"
            android:inputType="text" />

        <EditText
            android:id="@+id/bookPublisherInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publisher_input"
            android:inputType="text" />

        <EditText
            android:id="@+id/bookCategoriesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categories_input"
            android:inputType="text" />

    </LinearLayout>
</android.support.v7.widget.CardView>