<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_default_elevation"
    android:transitionName="@string/cardview_transition"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="@dimen/card_title_font_size"
            android:transitionName="@string/title_transition"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:transitionName="@string/author_transition"
            tools:targetApi="lollipop" />

    </LinearLayout>

</android.support.v7.widget.CardView>